--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,8 @@ body {
 }
 
 .swiper {
+  margin-left: 100px ;
+  padding-left: 100px;
   width: 100%;
   height: 100%;
 }
@@ -44,4 +46,3 @@ body {
   height: 100%;
   object-fit: cover;
 }
-
